// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb renders using ajax-loaded object data (deep parent chain) 1`] = `
<ul
  className="breadcrumb"
>
  <li>
    <a
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Main Menu
    </a>
  </li>
  <li>
    <a
      href="/edit"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Edit Home
    </a>
  </li>
  <li>
    <a
      href="/edit/object/foo:0"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Fake Parent 0
    </a>
  </li>
  <li>
    <a
      href="/edit/object/foo:1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Fake Parent 1
    </a>
  </li>
  <li>
    <a
      href="/edit/object/foo:2"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Fake Parent 2
    </a>
  </li>
  <li>
    <a
      href="/edit/object/foo:3"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Fake Parent 3
    </a>
  </li>
  <li>
    <a
      href="/edit/object/foo:4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Fake Parent 4
    </a>
  </li>
  <li>
    <a
      href="/edit/object/foo:5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Fake Parent 5
    </a>
  </li>
  <li>
    <a
      href="/edit/object/foo:6"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Fake Parent 6
    </a>
  </li>
  <li>
    <a
      href="/edit/object/foo:7"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Fake Parent 7
    </a>
  </li>
  <li>
    <a
      href="/edit/object/foo:8"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Fake Parent 8
    </a>
  </li>
  <li>
    <a
      href="/edit/object/foo:9"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Fake Parent 9
    </a>
  </li>
  <li>
    <a
      href="/edit/object/foo:10"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Fake Parent 10
    </a>
  </li>
  <li>
    <a
      href="/edit/object/foo:11"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Fake Parent 11
    </a>
  </li>
  <li>
    <a
      href="/edit/object/foo:12"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Fake Parent 12
    </a>
  </li>
  <li>
    <a
      href="/edit/object/foo:13"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Fake Parent 13
    </a>
  </li>
  <li>
    <a
      href="/edit/object/foo:14"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Fake Parent 14
    </a>
  </li>
</ul>
`;

exports[`Breadcrumb renders using ajax-loaded object data (many parents, deep mode) 1`] = `
[
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <a
        href="/edit/object/foo:0"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 0
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <a
        href="/edit/object/foo:1"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 1
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <a
        href="/edit/object/foo:2"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 2
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <a
        href="/edit/object/foo:3"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 3
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <a
        href="/edit/object/foo:4"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 4
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <a
        href="/edit/object/foo:5"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 5
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <a
        href="/edit/object/foo:6"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 6
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <a
        href="/edit/object/foo:7"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 7
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <a
        href="/edit/object/foo:8"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 8
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <a
        href="/edit/object/foo:9"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 9
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <a
        href="/edit/object/foo:10"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 10
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <a
        href="/edit/object/foo:11"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 11
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <a
        href="/edit/object/foo:12"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 12
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <a
        href="/edit/object/foo:13"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 13
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <a
        href="/edit/object/foo:14"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 14
      </a>
    </li>
  </ul>,
]
`;

exports[`Breadcrumb renders using ajax-loaded object data (many parents, shallow mode) 1`] = `
[
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <button
        onClick={[Function]}
      >
        ...
      </button>
    </li>
    <li>
      <a
        href="/edit/object/foo:0"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 0
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <button
        onClick={[Function]}
      >
        ...
      </button>
    </li>
    <li>
      <a
        href="/edit/object/foo:1"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 1
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <button
        onClick={[Function]}
      >
        ...
      </button>
    </li>
    <li>
      <a
        href="/edit/object/foo:2"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 2
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <button
        onClick={[Function]}
      >
        ...
      </button>
    </li>
    <li>
      <a
        href="/edit/object/foo:3"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 3
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <button
        onClick={[Function]}
      >
        ...
      </button>
    </li>
    <li>
      <a
        href="/edit/object/foo:4"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 4
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <button
        onClick={[Function]}
      >
        ...
      </button>
    </li>
    <li>
      <a
        href="/edit/object/foo:5"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 5
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <button
        onClick={[Function]}
      >
        ...
      </button>
    </li>
    <li>
      <a
        href="/edit/object/foo:6"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 6
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <button
        onClick={[Function]}
      >
        ...
      </button>
    </li>
    <li>
      <a
        href="/edit/object/foo:7"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 7
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <button
        onClick={[Function]}
      >
        ...
      </button>
    </li>
    <li>
      <a
        href="/edit/object/foo:8"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 8
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <button
        onClick={[Function]}
      >
        ...
      </button>
    </li>
    <li>
      <a
        href="/edit/object/foo:9"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 9
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <button
        onClick={[Function]}
      >
        ...
      </button>
    </li>
    <li>
      <a
        href="/edit/object/foo:10"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 10
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <button
        onClick={[Function]}
      >
        ...
      </button>
    </li>
    <li>
      <a
        href="/edit/object/foo:11"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 11
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <button
        onClick={[Function]}
      >
        ...
      </button>
    </li>
    <li>
      <a
        href="/edit/object/foo:12"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 12
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <button
        onClick={[Function]}
      >
        ...
      </button>
    </li>
    <li>
      <a
        href="/edit/object/foo:13"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 13
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <button
        onClick={[Function]}
      >
        ...
      </button>
    </li>
    <li>
      <a
        href="/edit/object/foo:14"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 14
      </a>
    </li>
  </ul>,
]
`;

exports[`Breadcrumb renders using ajax-loaded object data (multiple parents with common grandparent) 1`] = `
[
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <a
        href="/edit/object/foo:1232"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Grandparent
      </a>
    </li>
    <li>
      <a
        href="/edit/object/foo:1233"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 1
      </a>
    </li>
  </ul>,
  <ul
    className="breadcrumb"
  >
    <li>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Main Menu
      </a>
    </li>
    <li>
      <a
        href="/edit"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Edit Home
      </a>
    </li>
    <li>
      <a
        href="/edit/object/foo:1232"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Grandparent
      </a>
    </li>
    <li>
      <a
        href="/edit/object/foo:1231"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Fake Parent 2
      </a>
    </li>
  </ul>,
]
`;

exports[`Breadcrumb renders using ajax-loaded object data (no parents, deep mode) 1`] = `
<ul
  className="breadcrumb"
>
  <li>
    <a
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Main Menu
    </a>
  </li>
  <li>
    <a
      href="/edit"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Edit Home
    </a>
  </li>
</ul>
`;

exports[`Breadcrumb renders using ajax-loaded object data (no parents, shallow mode) 1`] = `
<ul
  className="breadcrumb"
>
  <li>
    <a
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Main Menu
    </a>
  </li>
  <li>
    <a
      href="/edit"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Edit Home
    </a>
  </li>
</ul>
`;

exports[`Breadcrumb renders using ajax-loaded object data (simple case, deep mode) 1`] = `
<ul
  className="breadcrumb"
>
  <li>
    <a
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Main Menu
    </a>
  </li>
  <li>
    <a
      href="/edit"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Edit Home
    </a>
  </li>
  <li>
    <a
      href="/edit/object/foo:1233"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Fake Parent
    </a>
  </li>
</ul>
`;

exports[`Breadcrumb renders using ajax-loaded object data (simple case, shallow mode) 1`] = `
<ul
  className="breadcrumb"
>
  <li>
    <a
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Main Menu
    </a>
  </li>
  <li>
    <a
      href="/edit"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Edit Home
    </a>
  </li>
  <li>
    <button
      onClick={[Function]}
    >
      ...
    </button>
  </li>
  <li>
    <a
      href="/edit/object/foo:1233"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Fake Parent
    </a>
  </li>
</ul>
`;

exports[`Breadcrumb renders without a pid 1`] = `
<ul
  className="breadcrumb"
>
  <li>
    <a
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Main Menu
    </a>
  </li>
</ul>
`;
